# GremlinChat

./: .gitignore  README.md  pyproject.toml
scripts/: install_gremlinchat_windows.ps1
src/gremlinchat/: __init__.py  cli.py  crypto.py  daemon.py  install.py  jsonutil.py  messages.py  pairing.py  receipts.py  redaction.py  relay.py  roomops.py  runbooks.py  store.py  trial.py
tests/: test_consent_gates.py  test_crypto_pairing.py  test_install.py  test_pairing.py  test_receipts.py  test_relay_runbooks.py  test_trial.py
