[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gremlinchat"
version = "0.1.0"
description = "Private, permissioned runbook coordination for trusted machines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
gremlinchat = "gremlinchat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

